--- a/test/fixtures/logs.yml
+++ b/test/fixtures/logs.yml
@@ -1,21 +1,21 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  worked_on: 2021-01-21
-  before_started: 2021-01-21 06:53:42
-  before_finished: 2021-01-21 06:53:42
-  after_started: 2021-01-21 06:53:42
-  after_finished: 2021-01-21 06:53:42
-  instructor: MyString
-  approval_day: 2021-01-21
-  attendance: one
+  log_worked_on: 2021-03-05 14:16:39
+  before_started: 2021-03-05 14:16:39
+  before_finished: 2021-03-05 14:16:39
+  after_started: 2021-03-05 14:16:39
+  after_finished: MyString
+  log_instructor: MyString
+  approval_day: 2021-03-05
+  attendances: one
 
 two:
-  worked_on: 2021-01-21
-  before_started: 2021-01-21 06:53:42
-  before_finished: 2021-01-21 06:53:42
-  after_started: 2021-01-21 06:53:42
-  after_finished: 2021-01-21 06:53:42
-  instructor: MyString
-  approval_day: 2021-01-21
-  attendance: two
+  log_worked_on: 2021-03-05 14:16:39
+  before_started: 2021-03-05 14:16:39
+  before_finished: 2021-03-05 14:16:39
+  after_started: 2021-03-05 14:16:39
+  after_finished: MyString
+  log_instructor: MyString
+  approval_day: 2021-03-05
+  attendances: two
